3rd/2ab87c2615509ef54eb9eb22e770138290085822.txt
crypto/x509v3/v3_alt.c:143: error: BUFFER_OVERRUN_L2
  Offset added: [0, 2147483646] Size: 32 by call to `X509V3_add_value_uchar`.
Showing all 15 steps of the trace


crypto/x509v3/v3_alt.c:143:9: Call
141.   
142.       case GEN_URI:
143.           X509V3_add_value_uchar("URI", gen->d.ia5->data, &ret);
               ^
144.           break;
145.   

crypto/x509v3/v3_utl.c:111:1: Parameter `*name`
  109.   }
  110.   
  111. > int X509V3_add_value_uchar(const char *name, const unsigned char *value,
  112.                              STACK_OF(CONF_VALUE) **extlist)
  113.   {

crypto/x509v3/v3_utl.c:114:12: Call
  112.                              STACK_OF(CONF_VALUE) **extlist)
  113.   {
  114.       return X509V3_add_value(name, (const char *)value, extlist);
                    ^
  115.   }
  116.   

crypto/x509v3/v3_utl.c:83:1: Parameter `*name`
    81.   /* Add a CONF_VALUE name value pair to stack */
    82.   
    83. > int X509V3_add_value(const char *name, const char *value,
    84.                        STACK_OF(CONF_VALUE) **extlist)
    85.   {

crypto/x509v3/v3_utl.c:89:26: Call
    87.       char *tname = NULL, *tvalue = NULL;
    88.   
    89.       if (name && (tname = BUF_strdup(name)) == NULL)
                                   ^
    90.           goto err;
    91.       if (value && (tvalue = BUF_strdup(value)) == NULL)

crypto/buffer/buf_str.c:73:1: Parameter `*str`
      71.   }
      72.   
      73. > char *BUF_strdup(const char *str)
      74.   {
      75.       if (str == NULL)

crypto/buffer/buf_str.c:77:12: Call
      75.       if (str == NULL)
      76.           return NULL;
      77.       return BUF_strndup(str, strlen(str));
                       ^
      78.   }
      79.   

crypto/buffer/buf_str.c:87:11: <Offset trace>
85.           return NULL;
86.   
87.       siz = BUF_strnlen(str, siz);
                ^
88.   
89.       if (siz >= INT_MAX)

crypto/buffer/buf_str.c:87:11: Call
        85.           return NULL;
        86.   
        87.       siz = BUF_strnlen(str, siz);
                        ^
        88.   
        89.       if (siz >= INT_MAX)

crypto/buffer/buf_str.c:64:1: Parameter `*str`
          62.   #include <openssl/buffer.h>
          63.   
          64. > size_t BUF_strnlen(const char *str, size_t maxlen)
          65.   {
          66.       const char *p;

crypto/buffer/buf_str.c:70:5: Assignment
          68.       for (p = str; maxlen-- != 0 && *p != '\0'; ++p) ;
          69.   
          70.       return p - str;
                    ^
          71.   }
          72.   

crypto/buffer/buf_str.c:87:5: Assignment
        85.           return NULL;
        86.   
        87.       siz = BUF_strnlen(str, siz);
                  ^
        88.   
        89.       if (siz >= INT_MAX)

crypto/buffer/buf_str.c:80:1: <Length trace>
78.   }
79.   
80. > char *BUF_strndup(const char *str, size_t siz)
81.   {
82.       char *ret;

crypto/buffer/buf_str.c:80:1: Parameter `*str`
        78.   }
        79.   
        80. > char *BUF_strndup(const char *str, size_t siz)
        81.   {
        82.       char *ret;

crypto/buffer/buf_str.c:98:5: Array access: Offset added: [0, 2147483646] Size: 32 by call to `X509V3_add_value_uchar` 
        96.       }
        97.   
        98.       memcpy(ret, str, siz);
                   ^
        99.       ret[siz] = '\0';
        100.   
